--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,10 @@ edition = "2018"
 [dependencies]
 thiserror = "1.0.20"
 regex = "1.3"
-reqwest = { version = "0.10", features = [ "blocking", "json", "rustls-tls" ], default-features = false}
+reqwest = { version = "0.10", features = [ "json" ], default-features = false}
 serde = { version = "1", features = ["derive"]}
 serde_json = "1"
-ssdp-probe = "0.2"
 futures-util = "0.3.17"
 futures = "0.3.17"
 mdns = "3.0.0"
-async-std = "1.12.0"
+tokio = { version = "1.38.0", features = ["time", "macros", "rt", "rt-multi-thread"] }
